--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,4 @@ jobs:
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
           publish_dir: ${{ env.ROOT_DIR }}/build
+          verbose: true 
