--- a/cleanarchtools/package.json
+++ b/cleanarchtools/package.json
@@ -13,6 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@monaco-editor/react": "^4.6.0",
+    "change-case": "^5.4.4",
+    "framer-motion": "^11.2.12",
+    "json2csharp": "^1.0.3",
+    "pluralize": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
