--- a/cleanarchtools/package.json
+++ b/cleanarchtools/package.json
@@ -22,7 +22,8 @@
     "json2csharp": "^1.0.3",
     "pluralize": "^8.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
